--- a/VideogameDB/templates/VideogameDB/index.html
+++ b/VideogameDB/templates/VideogameDB/index.html
@@ -1,12 +1,32 @@
 {% extends 'VideogameDB/base.html' %}
 
 {% block content %}
-<div class='panel panel-default'>
-	<div class='panel panel-head'>
-		Hello
-	</div>
-	<div class='panel panel-body'>
-		How are you?
-	</div>
+<div class='row'>
+  <div class="col-md-2">
+  </div>
+  <div class="col-md-6">
+    <div class="panel panel-primary">
+      <div class="panel panel-heading">
+        <div class="panel-title" align="center" >Intro</div>
+      </div>
+      <div class="panel panel-body">
+        This is a test website in which is proving that I can use Django in a
+        nice, organized clear manor. I have incorporated bootstrap, JQuery, and
+        all other necessary dependancies to make it function as a normal
+        website. Furthermore, I have created a model in which I can store
+        information using forms and look at the current models in the database.
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class='panel panel-primary'>
+	    <div class='panel panel-heading'>
+        <h3 class="panel-title">Nav</h3>
+	    </div>
+	    <div class='panel panel-body'>
+        <a href="{% url 'vidya:index'  %}"> Click to go to a list of objects</a>
+	    </div>
+    </div>
+   </div>
 </div>
 {% endblock %}
