--- a/vidya/templates/vidya/base.html
+++ b/vidya/templates/vidya/base.html
@@ -18,59 +18,46 @@
     <![endif]-->
   </head>
   <body>
-    <nav class="navbar navbar-default">
-	   <div class="container-fluid">
-	    <!-- Brand and toggle get grouped for better mobile display -->
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-		      <span class="sr-only">Toggle navigation</span>
-		      <span class="icon-bar"></span>
-		      <span class="icon-bar"></span>
-		      <span class="icon-bar"></span>
-	      </button>
-	      <a class="navbar-brand" href="#">Brand</a>
-	    </div>
+ <nav class="navbar navbar-default" role="navigation">
+  <div class="container-fluid col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="index.php">Capstone Management</a>
+    </div>
 
-	    <!-- Collect the nav links, forms, and other content for toggling -->
-	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	      <ul class="nav navbar-nav">
-		      <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-		      <li><a href="#">Link</a></li>
-		      <li class="dropdown">
-		      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-		        <ul class="dropdown-menu" role="menu">
-		          <li><a href="#">Action</a></li>
-		          <li><a href="#">Another action</a></li>
-		          <li><a href="#">Something else here</a></li>
-		          <li class="divider"></li>
-		          <li><a href="#">Separated link</a></li>
-		          <li class="divider"></li>
-		          <li><a href="#">One more separated link</a></li>
-		        </ul>
-		      </li>
-	      </ul>
-	      <form class="navbar-form navbar-left" role="search">
-		      <div class="form-group">
-		        <input type="text" class="form-control" placeholder="Search">
-		      </div>
-		      <button type="submit" class="btn btn-default">Submit</button>
-	      </form>
-	      <ul class="nav navbar-nav navbar-right">
-		      <li><a href="#">Link</a></li>
-		      <li class="dropdown">
-		      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-		        <ul class="dropdown-menu" role="menu">
-		          <li><a href="#">Action</a></li>
-		          <li><a href="#">Another action</a></li>
-		          <li><a href="#">Something else here</a></li>
-		          <li class="divider"></li>
-		          <li><a href="#">Separated link</a></li>
-		        </ul>
-		      </li>
-	      </ul>
-	    </div><!-- /.navbar-collapse -->
-	  </div><!-- /.container-fluid -->
-	</nav>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="#">Home</a></li>
+        <li id="teamNav"><a href="#">Submit Project</a></li>
+        <li id="streamNav"><a href="#">View Projects</a></li>
+        <li id="streamNav"><a href="#">About</a></li>
+        <li id="streamNav"><a href="#">Contact</a></li>
+      </ul>
+      
+      {% if user and not user.is_anonymous %}
+      {% else %}
+        <ul class="nav navbar-nav navbar-right">
+          <li id="userNav" class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Log in<span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="{% url 'social:begin' 'google-oauth2' %}?next={{ request.path }}">Student</a>
+              <li><a href="#">Submitter</a>
+              <li><a href="#">Faculty/Staff</a>
+              <li><a href="index.php?action=end"></a></li>
+            </ul>
+          </li>
+        </ul>
+      {% endif %}
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
     {% block content %}
 
     {% endblock %}
